@@ -5,5 +5,6 @@ export(punctuate)
 export(python_setup)
 export(transformer_scores)
 importFrom(stats,na.omit)
+importFrom(utils,data)
 importFrom(utils,packageDescription)
 importFrom(utils,packageVersion)
