@@ -1,0 +1,18 @@
+#' Stop Words from the \emph{tm} Package
+#'
+#' 174 English stop words in the \emph{tm} package
+#'
+#' @name stop_words
+#'
+#' @docType data
+#'
+#' @usage data(stop_words)
+#'
+#' @format A vector (length = 174)
+#' 
+#' @keywords datasets
+#'
+#' @examples
+#' data("stop_words")
+#'
+NULL
